Changed trash button name to "thrash that trash" as a test to see if I can now push changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Which bin?</string>
-    <string name="trashButton">Trash</string>
+    <string name="trashButton">Thrash that trash!</string>
     <string name="recycleButton">Recycle</string>
     <string name="nextButton">Next</string>
     <string name="correctMessage">The Answer Is Correct!</string>
