--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">Which bin?</string>
-    <string name="trashButton">Thrash that trash!</string>
+    <string name="generalWasteButton">General Waste</string>
     <string name="recycleButton">Recycle</string>
+    <string name="organicWasteButton">Organic Waste</string>
     <string name="nextButton">Next</string>
     <string name="correctMessage">The Answer Is Correct!</string>
     <string name="incorrectMessage">The Answer Is Incorrect :(</string>
 
     <!--List of questions-->
-    <string name="question_zero">Thermocol</string>
+    <string name="question_zero">Polystyrene</string>
     <string name="question_one">Plastic Bottle</string>
     <string name="question_two">Paper Bag</string>
     <string name="question_three">Aluminium Can</string>
