--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
+    <!--Main menu strings-->
+    <string name="mainMenu">Pick a game!</string>
+    <string name="whichBin">Click here to play the which bin game!</string>
+    <string name="trivia_game">Click here to play the climate change trivia game!</string>
+
+
+    <!--Which bin game strings-->
     <string name="app_name">Which bin?</string>
     <string name="generalWasteButton">General Waste</string>
     <string name="recycleButton">Recycle</string>
@@ -20,4 +27,6 @@
     <string name="question_nine">Dishwasher</string>
     <string name="question_ten">Desk</string>
 
+    <!--Trivia Game strings-->
+    <string name="trivia_title">Trivia time</string>
 </resources>
