Created a simple tile-based movement game in a different project and imported it to this one.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="whichBin">Click here to play the which bin game!</string>
     <string name="trivia_game">Click here to play the climate change trivia game!</string>
     <string name="multiplayer_game">Click here to play the multiplayer game!</string>
+    <string name="main_game">Click here to play the main game!</string>
 
     <!--Which bin game strings-->
     <string name="app_name">Which bin?</string>
