Added a title screen. Fixed a bug in the main menu in which the multiplayer button wouldn't reset even after resetting all progress.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="reset_button">Reset Progress</string>
 
     <!--Which bin game strings-->
-    <string name="app_name">Which bin?</string>
+    <string name="app_name">Schooling For Cooling</string>
     <string name="generalWasteButton">General Waste</string>
     <string name="recycleButton">Recycle</string>
     <string name="organicWasteButton">Organic Waste</string>
